# atmoz

./: .gitignore  README.md  atmoz_tutorial_TOLNET.ipynb  atmoz_tutorial_geoscf.ipynb  atmoz_tutorial_lidar.ipynb  atmoz_tutorial_surface.ipynb  atmoz_tutorial_test.ipynb  catalog_test.parquet  pyproject.toml  pythonbootcamp_W2.ipynb  schema_generation.py  untitled1.py
atmoz/: config.ini  config.py
atmoz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
atmoz/assets/package_info/: filetree.txt
atmoz/config/: atmoz.paths
atmoz/data_access/: NASA.py
atmoz/data_management/: data_management.py  merger_catalog.py  message_file.logs
atmoz/dataclasses/: AtmoDataset.py  AtmoFrame.py  __init__.py
atmoz/lidar/: README.md  TOLNet.py  TOLNet_V2.py  __init__.py  dev_TOLNET.py  temp_TOLNet.py  tolnet_v01.py  untitled2.py
atmoz/lidar/.ipynb_checkpoints/: tolnet_v01-checkpoint.py
atmoz/models/: README.md  __init__.py  dev_GEOS_CF.py  geos_cf.py
atmoz/resources/: atmoz_dataclasses.py  colorbars.py  dataclasses.py  debug.py  default_plot_params.py  everything.joblib  geoSlicing.py  getData.py  importData.py  makePlots.py  parallelExecutor.py  path_manager.py  plot_utilities.py  projects.py  sessionHandler.py  tempStore.py  test.py  timeConversions.py  useful_functions.py  utilities.py
atmoz/resources/schema/: catalog.metadata  lidar.metadata
atmoz/satellites/.ipynb_checkpoints/: TEMPO-checkpoint.py
atmoz/surface/: AirNow.py  README.md  __init__.py  utilities.py
atmoz/surface/.ipynb_checkpoints/: EPA_AirNow-checkpoint.ipynb
data/catalog.parquet/year=2025/month=08/day=10/: 612e5db7-e7af-4c81-a5f6-75aa4d94b80f.parquet  6b18c4cc-06e9-4db4-a98e-7e1a6d4ea837.parquet
downloads/: 13674.json  13678.json  13680.json  13735.json  13736.json  13737.json  13740.json  13741.json  13746.json  13749.json
project/: mkdocs.yml
test/: README.md
test/notebooks/: test.ipynb
tutorials/: EPA_AirNow.ipynb  TOLNet_Tutorial.ipynb
tutorials/.ipynb_checkpoints/: TOLNet_Tutorial-checkpoint.ipynb
