[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atmoz"
version = "0.0.1"
description = "Atmoshperic Science Toolkit focused on Groundbased Datasets"
readme = "README.md"
authors = [
    { name = "Maurice Roots", email = "mrmoroots@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "pyyaml",
    "requests",
    "matplotlib",
    "tqdm",
    "pydantic>=2.10.6",
    "httpx>=0.28.1",
    "earthaccess>=0.9.0",
    "keyring>=25.5.0",
    "geopandas>=0.13.2",
    "scipy>=1.10.1",
    "shapely>=2.0.7",
    "plotly>=6.5.2",
    "h5py>=3.11.0",
    "windrose>=1.9.2",
    "beautifulsoup4>=4.14.3",
    "netcdf4>=1.7.2"
]

[project.scripts]
atmoz-project = "atmoz.resources.projects:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["atmoz*"]

[tool.setuptools.package-data]
"atmoz.schemas" = ["*.arrow"]
